<resources>
    <string name="app_name">InventoryAppPart1</string>
    <string name="ProductInfo">Product Information</string>
    <string name="ProductName">Product Name</string>
    <string name="ProductPrice">Price</string>
    <string name="ProductQuantity">Quantity</string>
    <string name="phone_hint">#</string>
    <string name="SupplierInfo">Supplier Information</string>
    <string name="SupplierNumber">Phone</string>
    <string name="SupplierWalmart">Walmart</string>
    <string name="SupplierCostco">Costco</string>
    <string name="SupplierUline">Uline</string>


    <string name="dummy_data">Insert Dummy Data</string>
    <string name="delete_all">Delete All Entries</string>

    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="cancel">canel</string>

    <string name="editor_title">Add an Item</string>
    <string name="edit_item_title">Edit Item</string>

    <string name="save_error">Error saving item</string>
    <string name="save_item">Item saved</string>

    <string name="update_error">Error updating item</string>
    <string name="update_item">Item updated</string>

    <string name="delete_error">Error with deleting</string>
    <string name="delete_item">Item deleted</string>

    <string name="plus">+</string>
    <string name="minus">-</string>

    <string name="quantity_error">Cannot have a negative quantity</string>

    <string name="sale_button">Sale</string>
    <string name="sale_error">Unable to complete sale</string>

    <string name="order_button">Order</string>
    <string name="order_phone">a phone number hasn\'t been entered</string>

    <string name="required_name">Product Name is Required</string>
    <string name="required_price">Price is required</string>
    <string name="required_error">Please input a numeric value for price</string>
    <string name="required_quantity">Quantity is required</string>
    <string name="required_phone">Phone number is required</string>

    <string name="delete_confirm">Are you sure you want to delete this?</string>



</resources>
